test/wacc/extensions/void_types/invalidVoidSyntax.wacc
# void function body contains return

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  void sayHello() is
    string hello = "Hello!";
    println hello;
    return hello
  end
  call sayHello()
end
